# Computing-Project

./: CMakeLists.txt  Main.cpp
gui/: Button.cpp  Button.h
screens/: MenuScreen.cpp  MenuScreen.h  Screen.h
util/: SpriteUtil.h
